# kinesis-consumer

./: Cargo.toml  README.md  build.rs  docker-compose.yml
examples/: Cargo.toml
examples/src/client/: main.rs
kinesis-butler/: Cargo.toml
kinesis-butler-cli/: Cargo.toml
kinesis-butler-cli/src/: main.rs
kinesis-butler/src/: connection_table.rs  consumer_lease.rs  kinesis_butler.rs  lib.rs  server.rs
proto/: jarvis.proto  kinesisbutler.proto
src/: client.rs  connection_manager.rs  kinesis_butler.rs  main.rs  receiver_aware_stream.rs  receiver_stream.rs  record_processor.rs  server.rs  service.rs
src/aws/: kinesis.rs
src/consumer/: lease.rs
src/proto/: mod.rs
src/storage/: dynamo_manager.rs  manager.rs  memory_manager.rs  mod.rs  postgres.rs
