[package]
name = "jarvis-kinesis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]] # Bin to run the HelloWorld gRPC server
name = "helloworld-server"
path = "src/server.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "helloworld-client"
path = "src/client.rs"

[dependencies]
tonic = "0.6"
prost = "0.9"
futures-core = "0.3"
futures-util = "0.3"
rusoto_core = "0.47.0"
rusoto_kinesis = "0.47.0"
rusoto_dynamodb = "0.47.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-stream = "0.1"
async-trait = "0.1.51"

async-stream = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.7"

[build-dependencies]
tonic-build = "0.6"
