[package]
name = "kinesis-butler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]] # Bin to run the Kinesis Butler gRPC server
name = "kinesis-butler"
path = "src/main.rs"


[dependencies]
tonic = { version = "0.6", features = ["transport"] }
prost = "0.9"
futures = "0.3"
rusoto_core = "0.47.0"
rusoto_kinesis = "0.47.0"
tokio-postgres = { version = "0.7.5", features = ["with-uuid-0_8"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "sync", "time", "signal"] }
tokio-stream = "0.1"
async-trait = "0.1.51"

async-stream = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.7"
lazy_static = "1.4.0"
uuid = { version = "0.8.2", features = ["v4"] }

[build-dependencies]
tonic-build = "0.6"
