[package]
name = "kinesis-butler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]] # Bin to run the Kinesis Butler gRPC server
name = "kinesis-butler"
path = "src/main.rs"


[dependencies]
anyhow = "1.0.52"
clap = { version = "3.0.14", features = ["derive"] }
tonic = { version = "0.6", features = ["transport"] }
prost = "0.9"
futures = "0.3"
rusoto_core = "0.47.0"
rusoto_kinesis = { version = "0.47.0", features = ["serialize_structs"] }
rusoto_mock = "0.47.0"
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "postgres", "uuid"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "sync", "time", "signal"] }
tokio-stream = "0.1"
async-trait = "0.1.51"

async-stream = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.7"
lazy_static = "1.4.0"
uuid = { version = "0.8.2", features = ["v4"] }

[build-dependencies]
tonic-build = "0.6"
