[package]
name = "kinesis-butler-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.0.14", features = ["derive"] }
kinesis-butler = { version = "0.1.0", path = "../kinesis-butler" }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "sync", "time", "signal"] }
tonic = { version = "0.6", features = ["transport"] }
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "postgres", "uuid"] }
futures = "0.3"
